[package]
name = "ptypes"
version = "0.1.0"
authors = ["Antonio Estevez <aestgar62@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
uriparse = { version = "0.6", optional = true }

[features]
default = ["json"]
json = ["serde_json", "uriparse"]