[package]
name = "ptypes"
version = "0.1.4"
authors = ["Antonio Estevez <aestgar62@gmail.com>"]
edition = "2021"

[dependencies]
base64 = { version = "0.21", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
uriparse = { version = "0.6", optional = true }
zeroize = { version = "1.5.7", features = ["zeroize_derive"]}

[features]
default = ["json"]
json = ["serde_json", "uriparse", "base64"]