[package]
name = "ptypes"
version = "0.1.5"
authors = ["Antonio Estevez <aestgar62@gmail.com>"]
edition = "2021"

[dependencies]
base64 = { version = "0.21", optional = true }
num-bigint = { version = "0.8.2", features = ["i128", "u64_digit", "prime", "zeroize"], default-features = false, package = "num-bigint-dig", optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
uriparse = { version = "0.6", optional = true }
zeroize = { version = "1.5.7", features = ["zeroize_derive"]}

[features]
default = ["json", "bigint"]
json = ["serde_json", "uriparse", "base64"]
bigint = ["num-bigint", "num-traits"]